--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  <img src="./assets/images/birthday.png" height="200" alt="birthday invitation project preview"/>
 
  <hr />
- <a href="./public/about.html">about Me</a> <a href="./public/contact.html">Contact Me</a>
+ <a href="./public/about.html">About Me</a> <a href="./public/contact.html">Contact Me</a>
 </body>
 
 </html>
