--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  <h1>Yudi's Portfolio</h1>
  <h2>This is My Journey become Developer</h2>
  <hr/>
- <h3><a href="../4.3 HTML Porfolio Project/public/movie-ranking.html">Movie Ranking Project</a></h3>
+ <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
  <img src="./assets/images/movie ranking.png" height="200" alt="Movie ranking project preview"/>
  <h3><a href="./public/birthday-invite.html">Birthday Invitation Project</a></h3>
  <img src="./assets/images/birthday.png" height="200" alt="birthday invitation project preview"/>
